--- a/index.html
+++ b/index.html
@@ -20,38 +20,19 @@
     <title>HTML5 Deck of Cards</title>
     <link href="example.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,300,600|Ubuntu+Condensed" rel="stylesheet" type="text/css">
-    <link href="carbonads.css" rel="stylesheet" type="text/css">
-    <link href="addthis.css" rel="stylesheet" type="text/css">
-    <script>
-      (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-      (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-      m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-    })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
-
-      ga('create', 'UA-54216829-2', 'auto');
-      ga('send', 'pageview');
-    </script>
   </head>
   <body>
     <div id="container"></div>
     <div id="topbar"></div>
-    <script async type="text/javascript" src="https://cdn.carbonads.com/carbon.js?zoneid=1673&serve=C6AILKT&placement=deckofcardsjsorg" id="_carbonads_js"></script>
-
-    <script type="text/javascript" src="https://s7.addthis.com/js/300/addthis_widget.js#pubid=ra-56046d756b722156" async="async"></script>
-
-    <a href="https://github.com/pakastin/deck-of-cards">
-      <img class="gh-ribbon" style="position: fixed; top: 0; right: 0; border: 0;" src="https://camo.githubusercontent.com/52760788cde945287fbb584134c4cbc2bc36f904/68747470733a2f2f73332e616d617a6f6e6177732e636f6d2f6769746875622f726962626f6e732f666f726b6d655f72696768745f77686974655f6666666666662e706e67" alt="Fork me on GitHub" data-canonical-src="https://s3.amazonaws.com/github/ribbons/forkme_right_white_ffffff.png">
-    </a>
-
-    <div class="addthis_sharing_toolbox"></div>
 
     <script src="dist/deck.min.js"></script><script src="example.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/fastclick/1.0.6/fastclick.min.js"></script>
     <script>
       FastClick.attach(document.body);
-      if ((window.location.protocol !== 'file:') && (window.location.hostname !== 'deck-of-cards.js.org')) {
-        window.location.href = 'https://deck-of-cards.js.org'
-      }
     </script>
+
+	<input type="number" class="player1 counter" value="20" placeholder="Player 1">
+	<input type="number" class="player2 counter" value="20" placeholder="Player 2">
+
   </body>
 </html>
