--- a/index.html
+++ b/index.html
@@ -7,19 +7,20 @@
     <meta name="author" content="Juha Lindstedt">
     <meta property="og:title" content="HTML5 Deck of Cards" />
     <meta property="og:description" content="Play with Deck of Cards, source available! Pure vanilla JS – no dependencies.">
-    <meta property="og:image" content="https://deck-of-cards.js.org/fb.png" />
-    <meta property="og:url" content="https://deck-of-cards.js.org">
+    <meta property="og:image" content="fb.png" />
+    <meta property="og:url" content="https://luckyshot.github.io/deck-of-cards/">
     <meta property="twitter:card" content="summary">
     <meta property="twitter:site" content="@pakastin">
     <meta property="twitter:creator" content="@pakastin">
     <meta property="twitter:title" content="HTML5 Deck of Cards">
     <meta property="twitter:description" content="Play with Deck of Cards, source available! Pure vanilla JS – no dependencies.">
-    <meta property="twitter:image" content="https://deck-of-cards.js.org/fb.png">
+    <meta property="twitter:image" content="fb.png">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="apple-mobile-web-app-capable" content="yes">
     <title>HTML5 Deck of Cards</title>
     <link href="example.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,300,600|Ubuntu+Condensed" rel="stylesheet" type="text/css">
+	<link rel="shortcut icon" href="favicon.png">
   </head>
   <body>
     <div id="container"></div>
